# cutout

./: .dockerignore  .gitignore  Dockerfile  compose.example.yaml  pyproject.toml  renovate.json  todo-features.md
.claude/skills/smoke-bench/: SKILL.md
.github/workflows/: docker.yml
bench/: config.example.toml
scripts/: create-podcast.sh  migrate_drop_secret.py  podcast_info.py
src/cutout/: __init__.py  __main__.py  app.py  config.py  dashboard.py  draining.py  fair_queue.py  log.py  opml.py  podcasts.py  runtime.py
src/cutout/bench/: __init__.py  __main__.py  checks.py
src/cutout/common/: __init__.py  delay.py  duration.py  feed_id.py  paths.py  storage.py
src/cutout/templates/: _feeds.html  dashboard.html
src/cutout/worker/: __init__.py  chapters.py  edit.py  feed_xml.py  fetch.py  ffmpeg.py  media.py  pipeline.py  processor.py
tests/: test_app.py  test_bench_checks.py  test_bench_env.py  test_bench_fit.py  test_chapters.py  test_common.py  test_consumer.py  test_edit.py  test_fair_queue.py  test_feed_xml.py  test_media.py  test_opml.py  test_pipeline.py  test_podcasts.py  test_processor.py  test_storage.py
