[project]
name = "cutout"
version = "0.1.0"
description = "cutout"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "boto3>=1.34",
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27",
]

[project.scripts]
cutout = "cutout.__main__:run"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cutout"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
